# Nenufar

./: .gitignore  Cargo.toml  README.md
src/: activation_fn.rs  blaf.rs  lib.rs  neural_net.rs  num_gen.rs  topology.rs
