[package]
name = "nenufar"
version = "0.1.0"
authors = ["Bastian Gonzalez Acevedo <bastiangonzalezacevedo@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Nenufar is Rust library to create simple neural network"
repository = "https://github.com/BaGoA/Nenufar"
readme = "README.md"
keywords = ["neural-network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
